test: stop collecting user information

--- a/i18n/languages.json
+++ b/i18n/languages.json
@@ -82,7 +82,7 @@
         "redirect-summary": "Quick redirect",
         "redirect-question-to": "Which page do you want to redirect $1 to?",
         "redirect-question-from": "Which page do you want to redirect to $1?",
-        "redirect-question-fragment": "Which section of this page do you want to redirect to? You can leave it blank.",
+        "redirect-question-fragment": "Which section of this page do you want to redirect to? (optional)",
         "redirect-title": "Quick Redirect",
         "notify-redirect-success": "Redirect successful.",
         "notify-redirect-error": "Some error(s) occurred while creating redirect",
@@ -177,7 +177,7 @@
         "preference-editHobits-label": "Edit hobits",
         "preference-watchList-label": "Watchlist preference",
         "preference-watchList-nochange": "Do not change my watchlist when editing",
-        "preference-watchList-preferences": "Conform to Special:Preferences",
+        "preference-watchList-preferences": "Conform to [[Special:Preferences]]",
         "preference-watchList-unwatch": "Remove edited pages from my watchlist",
         "preference-watchList-watch": "Add edited pages to my watchlist",
         "preference-redLinkQuickEdit": "Add quick edit buttons after red links",
@@ -1184,6 +1184,7 @@
         "editSummary": "编辑摘要",
         "markAsMinor": "标记为小编辑",
         "watchThisPage": "监视此页面",
+        "unlockWatchList": "解锁以便手动设置监视或取消监视",
         "editor-button-save": "保存更改",
         "editor-confirm-save": "确定要保存编辑吗？",
         "editor-button-preview": "显示预览",
@@ -1203,6 +1204,7 @@
         "redirect-summary": "快速重定向到",
         "redirect-question-to": "要将$1重定向到哪个页面？",
         "redirect-question-from": "将哪个页面重定向到$1？",
+        "redirect-question-fragment": "要重定向到页面的哪个章节？（可选）"
         "redirect-title": "快速重定向",
         "notify-redirect-success": "创建重定向成功！",
         "notify-redirect-error": "创建重定向时出现错误。",
@@ -1324,7 +1326,11 @@
         "preference-analysis-title": "数据分析",
         "preference-another-title": "其他设定",
         "preference-editHobits-label": "编辑习惯",
-        "preference-watchList": "预设进行监视",
+        "preference-watchList-label": "监视设定",
+        "preference-watchList-nochange": "编辑页面不改变监视列表",
+        "preference-watchList-preferences": "遵从[[特殊:参数设置]]",
+        "preference-watchList-unwatch": "将编辑过的页面移出监视列表",
+        "preference-watchList-watch": "将编辑过的页面加入监视列表",
         "preference-redLinkQuickEdit": "在红链后添加快速编辑按钮",
         "preference-plugin-footer": "你可以在这里选用官方插件，欢迎前往[$1 InPageEdit-Plugins]贡献你的代码！一些插件需要重新加载页面才能生效。",
         "preference-analysis-totaluse": "<strong>使用总次数</strong>：$1 次",
