fix(i18n): should not use internal links in preference dialog

--- a/i18n/languages.json
+++ b/i18n/languages.json
@@ -177,7 +177,7 @@
         "preference-editHobits-label": "Edit hobits",
         "preference-watchList-label": "Watchlist preference",
         "preference-watchList-nochange": "Do not change my watchlist when editing",
-        "preference-watchList-preferences": "Conform to [[Special:Preferences]]",
+        "preference-watchList-preferences": "Conform to Special:Preferences",
         "preference-watchList-unwatch": "Remove edited pages from my watchlist",
         "preference-watchList-watch": "Add edited pages to my watchlist",
         "preference-redLinkQuickEdit": "Add quick edit buttons after red links",
@@ -1230,6 +1230,7 @@
         "preference-editor-label": "编辑器设置",
         "preference-outSideClose": "点击编辑器外侧关闭",
         "preference-setMinor": "预设编辑为小编辑",
+        "preference-noConfirmEdit": "提交编辑时无需确认",
         "preference-summary-label": "编辑摘要",
         "preference-editSummary": "<code>$section</code> - 将会被替换为<code>/<!-- -->* 段落名字 */</code><br><code>$oldid</code> - 将会被替换为<code>编辑自[<!-- -->[Special:Diff/oldid]]</code>",
         "preference-analysis-label": "数据收集",
@@ -1328,7 +1329,7 @@
         "preference-editHobits-label": "编辑习惯",
         "preference-watchList-label": "监视设定",
         "preference-watchList-nochange": "编辑页面不改变监视列表",
-        "preference-watchList-preferences": "遵从[[特殊:参数设置]]",
+        "preference-watchList-preferences": "遵从 特殊:参数设置",
         "preference-watchList-unwatch": "将编辑过的页面移出监视列表",
         "preference-watchList-watch": "将编辑过的页面加入监视列表",
         "preference-redLinkQuickEdit": "在红链后添加快速编辑按钮",
