--- a/i18n/languages.json
+++ b/i18n/languages.json
@@ -50,17 +50,6 @@
         "editor-confirm-save": "Are you sure you want to save the changes?",
         "editor-button-preview": "Show preview",
         "editor-button-diff": "Show changes",
-        "editor-button-findAndReplace": "Find&Replace",
-        "fAndR-title": "Find & Replace",
-        "fAndR-find-text": "Find text:",
-        "fAndR-replace-text": "Replace text:",
-        "fAndR-globl": "Find global",
-        "fAndR-case-sen": "Case sensitive",
-        "fAndR-enable-regex": "Enable regex",
-        "fAndR-button-undo": "UNDO",
-        "fAndR-button-replace": "REPLACE",
-        "notify-fAndR-undo": "Content has been restored to the text before F&R window was opened",
-        "notify-fAndR-done": "$1 text replaced",
         "editor-detail-button-toggle": "Page details",
         "editor-detail-button-templates": "Templates used",
         "editor-detail-title-templates": "Templates used on this page",
@@ -229,17 +218,6 @@
         "editor-confirm-save": "هل أنت متأكد أنك تريد حفظ التغييرات؟",
         "editor-button-preview": "عرض المعاينة",
         "editor-button-diff": "إظهار التغييرات",
-        "editor-button-findAndReplace": "بحث واستبدال",
-        "fAndR-title": "بحث واستبدال",
-        "fAndR-find-text": ":بحث عن نص",
-        "fAndR-replace-text": ":استبدل النص",
-        "fAndR-globl": "ابحث عن العالمية",
-        "fAndR-case-sen": "حساسية الموضوع",
-        "fAndR-enable-regex": "تمكين التعبير العادي",
-        "fAndR-button-undo": "الغاء التحميل",
-        "fAndR-button-replace": "يحل محل",
-        "notify-fAndR-undo": "تمت استعادة المحتوى إلى النص قبل فتح نافذة البحث والاستبدال",
-        "notify-fAndR-done": "تم استبدال نص 1$",
         "window-leave-confirm": "هل أنت متأكد أنك تريد ترك علامة التبويب هذه؟ لن يتم حفظ النص الخاص بك",
         "notify-no-right": "لا يوجد إذن",
         "editor-no-right": "ليس لديك إذن بتحرير هذه الصفحة ولكن يمكنك ترك تعليقات على صفحة نقاش هذه الصفحة",
@@ -348,17 +326,6 @@
         "editor-confirm-save": "Êtes-vous {{GENDER:|sûr|sûre|sûr(e)}} de vouloir sauvegarder des modifications ?",
         "editor-button-preview": "Afficher la prévisualisation",
         "editor-button-diff": "Voir la différence",
-        "editor-button-findAndReplace": "Trouver&Remplacer",
-        "fAndR-title": "Trouver et Remplacer",
-        "fAndR-find-text": "Trouver le texte :",
-        "fAndR-replace-text": "Remplacer le texte :",
-        "fAndR-globl": "Recherche globale",
-        "fAndR-case-sen": "Respecter la case",
-        "fAndR-enable-regex": "Utiliser l'expression régulière",
-        "fAndR-button-undo": "ANNULER",
-        "fAndR-button-replace": "REMPLACER",
-        "notify-fAndR-undo": "Le contenu a été restauré à un texte avant que la fenêtre de \"T&R\" a été ouverte",
-        "notify-fAndR-done": "Texte de $1 remplacé",
         "window-leave-confirm": "Voulez-vous vraiment quitter cet onglet ? Votre texte ne sera PAS sauvegardé.",
         "notify-no-right": "Aucune permission",
         "editor-no-right": "Vous n'avez pas la permission de modifier cette page. Vous pouvez laisser vos commentaires sur cette page de discussion de cette page.",
@@ -467,17 +434,6 @@
         "editor-confirm-save": "क्या आप सच में इसे बदलना चाहते हैं?",
         "editor-button-preview": "पूर्वावलोकन",
         "editor-button-diff": "बदलाव देखें",
-        "editor-button-findAndReplace": "खोज कर बदलें",
-        "fAndR-title": "खोज कर बदलें",
-        "fAndR-find-text": "टेक्स्ट ढूंढें:",
-        "fAndR-replace-text": "टेक्स्ट को बदलें:",
-        "fAndR-globl": "ग्लोबल रूप से ढूंढें",
-        "fAndR-case-sen": "अक्षर-संवेदनशील",
-        "fAndR-enable-regex": "रिजेक्स सक्षम करें",
-        "fAndR-button-undo": "अनडू",
-        "fAndR-button-replace": "बदलें",
-        "notify-fAndR-undo": "कंटेंट को उस संस्करण तक ले जाय गया है जब F&R मोडल बंद था",
-        "notify-fAndR-done": "$1 टेक्स्ट को बदला जा चुका है",
         "editor-detail-button-toggle": "पृष्ठ का विस्तार",
         "editor-detail-button-templates": "इस्तेमाल किए गए टेम्पलेट",
         "editor-detail-title-templates": "इस पृष्ठ पर इस्तेमाल किए गए टेम्पलेट",
@@ -636,17 +592,6 @@
         "editor-confirm-save": "Are you sure you want to save the changes?",
         "editor-button-preview": "プレビュー",
         "editor-button-diff": "差分",
-        "editor-button-findAndReplace": "検索と置換",
-        "fAndR-title": "検索と置換",
-        "fAndR-find-text": "検索:",
-        "fAndR-replace-text": "置換:",
-        "fAndR-globl": "Find global",
-        "fAndR-case-sen": "完全一致",
-        "fAndR-enable-regex": "正規表現",
-        "fAndR-button-undo": "元に戻れ",
-        "fAndR-button-replace": "置換",
-        "notify-fAndR-undo": "Content has been restored to the text before F&R window was opened",
-        "notify-fAndR-done": "$1 text replaced",
         "editor-detail-button-toggle": "Page details",
         "editor-detail-button-templates": "Templates used",
         "editor-detail-title-templates": "Templates used on this page",
@@ -803,17 +748,6 @@
         "editor-confirm-save": "Weet u zeker dat u de verandering wilt opslaan?",
         "editor-button-preview": "Toon preview",
         "editor-button-diff": "Toon veranderingen",
-        "editor-button-findAndReplace": "Vinden&Vervangen",
-        "fAndR-title": "Vinden & Vervangen",
-        "fAndR-find-text": "Vind tekst:",
-        "fAndR-replace-text": "Vervang tekst:",
-        "fAndR-globl": "Vind globaal",
-        "fAndR-case-sen": "Hoofdlettergevoelig",
-        "fAndR-enable-regex": "Schakel regex in",
-        "fAndR-button-undo": "ONGEDAAN MAKEN",
-        "fAndR-button-replace": "VERVANGEN",
-        "notify-fAndR-undo": "Inhoud is hersteld naar de tekst voordat het V & V-venster werd geopend",
-        "notify-fAndR-done": "$1 tekst vervangen",
         "window-leave-confirm": "Weet u zeker dat u dit tabblad wilt verlaten? Uw tekst zal NIET opgeslagen worden.",
         "notify-no-right": "Geen toestemming",
         "editor-no-right": "U heeft GEEN toestemming om deze pagina te bewerking. U kan commentaar achterlaten op de discussie-pagina van deze pagina.",
@@ -909,17 +843,6 @@
         "editor-confirm-save": "Czy na pewno chcesz zapisać zmiany?",
         "editor-button-preview": "Pokaż podgląd",
         "editor-button-diff": "Pokaż zmiany",
-        "editor-button-findAndReplace": "Find&Replace",
-        "fAndR-title": "Znajdź & zamień",
-        "fAndR-find-text": "Znajdź tekst:",
-        "fAndR-replace-text": "Zastąp tekst",
-        "fAndR-globl": "Globalne wyszukiwanie",
-        "fAndR-case-sen": "Rozróżniaj wielkość liter",
-        "fAndR-enable-regex": "Włącz wyrażenia regularne",
-        "fAndR-button-undo": "COFNIJ",
-        "fAndR-button-replace": "ZAMIEŃ",
-        "notify-fAndR-undo": "Treść została przywrócona do stanu sprzed otwarcia okna znajdź i zamień",
-        "notify-fAndR-done": "$1 zamieniono",
         "window-leave-confirm": "Czy na pewno chcesz opuścić tę zakładkę? Tekst NIE zostanie zapisany.",
         "notify-no-right": "Brak uprawnień",
         "editor-no-right": "NIE posiadasz uprawnień do edycji tej strony. Możesz zostawić uwagi na jej stronie dyskusji.",
@@ -1031,17 +954,6 @@
         "editor-confirm-save": "Tem certeza que deseja salvar as mudanças?",
         "editor-button-preview": "Mostrar pré-visualização",
         "editor-button-diff": "Mostrar mudanças",
-        "editor-button-findAndReplace": "Encontrar e substituir",
-        "fAndR-title": "Encontrar e substituir",
-        "fAndR-find-text": "Encontrar texto:",
-        "fAndR-replace-text": "Substituir texto:",
-        "fAndR-globl": "Encontrar global",
-        "fAndR-case-sen": "Maiúsculas e minúsculas",
-        "fAndR-enable-regex": "Habilitar regex",
-        "fAndR-button-undo": "DESFAZER",
-        "fAndR-button-replace": "SUBSTITUIR",
-        "notify-fAndR-undo": "O conteúdo foi restaurado para o texto antes da janela F&R ser aberta",
-        "notify-fAndR-done": "$1 texto substituído",
         "editor-detail-button-toggle": "Detalhes da página",
         "editor-detail-button-templates": "Predefinições usadas",
         "editor-detail-title-templates": "Predefinições usadas nesta página",
@@ -1184,12 +1096,11 @@
         "editSummary": "编辑摘要",
         "markAsMinor": "标记为小编辑",
         "watchThisPage": "监视此页面",
-        "unlockWatchList": "解锁以便手动设置监视或取消监视",
+        "unlockWatchList": "点击解锁该选项，覆盖预设的监视行为",
         "editor-button-save": "保存更改",
         "editor-confirm-save": "确定要保存编辑吗？",
         "editor-button-preview": "显示预览",
         "editor-button-diff": "比较差异",
-        "editor-button-findAndReplace": "查找替换",
         "window-leave-confirm": "确定离开页面吗？您的编辑不会被保存。",
         "notify-no-right": "权限不足",
         "editor-no-right": "您没有编辑此页面的权限，您可以在讨论页提交修改建议。",
@@ -1269,16 +1180,6 @@
         "preview-title": "预览",
         "preview-error": "加载预览时出现错误。",
         "quick-diff": "快速差异",
-        "fAndR-title": "查找 & 替换",
-        "fAndR-find-text": "查找文字：",
-        "fAndR-replace-text": "替换文字：",
-        "fAndR-globl": "全局查找",
-        "fAndR-case-sen": "区分大小写",
-        "fAndR-enable-regex": "使用正则表达式",
-        "fAndR-button-undo": "重置",
-        "fAndR-button-replace": "替换",
-        "notify-fAndR-undo": "编辑框内的文字已被还原为打开查找替换窗口前的状态",
-        "notify-fAndR-done": "已替换$1处文字",
         "version-notice-title": "安装成功",
         "version-notice": "您好，感谢您使用InPageEdit！此插件可能会收集您的使用信息，但这些信息不会用于商业目的，也不会收集您的个人Cookie和隐私信息。您可以在设定中查看插件收集的信息统计链接。如果您不想让此插件收集您的任何信息，请停止使用此插件。如需反馈，请在GitHub中提交issue。",
         "version-notice-canary-title": "Canary版本稳定性警告",
@@ -1327,11 +1228,11 @@
         "preference-analysis-title": "数据分析",
         "preference-another-title": "其他设定",
         "preference-editHobits-label": "编辑习惯",
-        "preference-watchList-label": "监视设定",
-        "preference-watchList-nochange": "编辑页面不改变监视列表",
-        "preference-watchList-preferences": "遵从 特殊:参数设置",
-        "preference-watchList-unwatch": "将编辑过的页面移出监视列表",
-        "preference-watchList-watch": "将编辑过的页面加入监视列表",
+        "preference-watchList-label": "设置",
+        "preference-watchList-nochange": "不改变监视状态",
+        "preference-watchList-preferences": "使用 特殊:参数设置 中的值",
+        "preference-watchList-unwatch": "移除监视",
+        "preference-watchList-watch": "总是监视",
         "preference-redLinkQuickEdit": "在红链后添加快速编辑按钮",
         "preference-plugin-footer": "你可以在这里选用官方插件，欢迎前往[$1 InPageEdit-Plugins]贡献你的代码！一些插件需要重新加载页面才能生效。",
         "preference-analysis-totaluse": "<strong>使用总次数</strong>：$1 次",
@@ -1367,7 +1268,6 @@
         "editor-confirm-save": "確定要儲存變更嗎？",
         "editor-button-preview": "顯示預覽",
         "editor-button-diff": "比較差異",
-        "editor-button-findAndReplace": "尋找與取代",
         "window-leave-confirm": "確定離開頁面嗎？您的變更不會被儲存。",
         "notify-no-right": "權限不足",
         "editor-no-right": "您沒有編輯此頁面的權限，您可以在討論頁提交修改建議。",
@@ -1443,16 +1343,6 @@
         "preview-placeholder": "正在載入預覽……",
         "preview-title": "預覽",
         "preview-error": "載入預覽時出現錯誤。",
-        "quick-diff": "快速差異",
-        "fAndR-title": "尋找與取代",
-        "fAndR-find-text": "尋找下一個",
-        "fAndR-replace-text": "替換文字",
-        "fAndR-globl": "尋找全部",
-        "fAndR-case-sen": "區分大小寫",
-        "fAndR-enable-regex": "使用正規表示式（regex）",
-        "fAndR-button-undo": "復原",
-        "fAndR-button-replace": "取代",
-        "notify-fAndR-undo": "編輯框內的文字已被還原為開啟此視窗前的狀態",
-        "notify-fAndR-done": "成功取代$1"
+        "quick-diff": "快速差異"
     }
 }
